# pytest-fastmpi

./: README.md  pyproject.toml
.github/workflows/: test-mpi.yml
pytest_fastmpi/: __init__.py
test/: test_plugin.py
